[package]
license = "MIT"
edition = "2021"
version = "0.1.0"
name = "world-id-bridge"
authors = ["Miguel Piedrafita <rust@miguel.build>"]
repository = "https://github.com/worldcoin/wallet-bridge"
description = "A bridge between the World ID SDK and the World App"

[dependencies]
axum = "0.7.9"
tower = "0.5.1"
dotenvy = "0.15.7"
serde_json = "1.0.128"
tracing = { version = "0.1", features = ["log"] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
schemars = { version = "0.8.16", features = ["uuid1"] }
tower-http = { version = "0.6.1", features = ["cors"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
aide = { version = "0.13.2", features = ["axum", "scalar"] }
axum-jsonschema = { version = "0.8.0", features = ["aide"] }
redis = { version = "0.32.5", features = [
    "tokio-comp",
    "connection-manager",
    "tokio-rustls-comp",
] }
tracing-subscriber = { version = "0.3.20", default-features = false, features = [
    "fmt",
    "json",
] }
rustls = { version = "0.23.31", default-features = false, features = ["ring"] }

[build-dependencies]
chrono = "0.4.26"