[package]
license = "MIT"
edition = "2021"
version = "0.1.0"
name = "world-id-bridge"
authors = ["Miguel Piedrafita <rust@miguel.build>"]
repository = "https://github.com/worldcoin/wallet-bridge"
description = "A bridge between the World ID SDK and the World App"

[dependencies]
aide = { version = "0.13.2", features = ["axum", "scalar"] }
axum = "0.7.9"
axum-jsonschema = { version = "0.8.0", features = ["aide"] }
dotenvy = "0.15.7"
redis = { version = "0.32.5", features = [
    "tokio-comp",
    "connection-manager",
    "tokio-rustls-comp",
] }
rustls = { version = "0.23.31", default-features = false, features = ["ring"] }
schemars = { version = "0.8.16", features = ["uuid1"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.20", default-features = false, features = [
    "fmt",
    "json",
] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }

[build-dependencies]
chrono = "0.4.26"
