[package]
license = "MIT"
edition = "2021"
version = "0.1.0"
name = "world-id-bridge"
authors = ["Miguel Piedrafita <rust@miguel.build>"]
repository = "https://github.com/worldcoin/wallet-bridge"
description = "A bridge between the World ID SDK and the World App"

[dependencies]
aide = { version = "0.13.2", features = ["axum", "scalar"] }
axum = "0.8.6"
axum-jsonschema = { version = "0.8.0", features = ["aide"] }
dotenvy = "0.15.7"
openssl = { version = "0.10.73", features = ["vendored"] }
redis = { version = "0.32.6", default-features = false, features = ["connection-manager", "tokio-native-tls-comp"] }
schemars = { version = "0.8.16", features = ["uuid1"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["fmt", "json"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[build-dependencies]
chrono = "0.4.26"
